# unified-humanoid-getup

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  MUJOCO_LOG.TXT  Makefile  README.md  collect_data.py  crossq_live.onnx  enjoy_sbx.py  enjoy_sbx2.py  export.py  export_inference.py  multi_train.py  pyproject.toml  rename_models.py  requirements.txt  setup.py  standup_generate_initial.py  test_env.py  test_inference.py  train_sbx.py  unnamed.patch
analysis/: loo.csv  morph.csv  plots.ipynb  s3.csv  s3_all.csv  s3_all_bb.csv  s3_bb.csv  special.csv  special_all.csv
frasa_env/: __init__.py  div.py  fes.py  fsdf.py  loo.csv  loo.py  morph.csv  mprh.py  plots.ipynb  policy.py  s3.csv  s3_all.csv  s3_all_bb.csv  s3_bb.csv  special.csv  special_all.csv
frasa_env/env/: __init__.py  standup.py  standup_env.py  standup_initial_configurations.pkl
frasa_env/env/bez/: standup_initial_configurations.pkl
frasa_env/env/bez3/: standup_initial_configurations.pkl
frasa_env/env/bitbot/: standup_initial_configurations.pkl
frasa_env/env/op3/: standup_initial_configurations.pkl
frasa_env/mujoco_simulator/: __init__.py  fdxf.py  sdfgz.py  simulator.py
frasa_env/mujoco_simulator/model/: README.md  ball.xml  bez1.xml  bez3.xml  bitbot.xml  dfdsf  nugus.xml  op3.xml  robot.urdf  robot.xml  robot2.xml  (+10 more)
hyperparams/: crossq.yml  ppo.yml  sac.yml  td3.yml  tqc.yml
unified_humanoid_get_up_env/: __init__.py
unified_humanoid_get_up_env/env/: __init__.py  standup.py  standup_env.py
unified_humanoid_get_up_env/mujoco_simulator/: simulator.py
(+209 files in other folders)
