[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "unified_humanoid_get_up_env"
authors = [
  {name = "Jonathan Spraggett", email = "jonathanspraggett@gmail.com" }
]
description = "Unified Humanoid Get-Up RL Environment"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["Reinforcement learning", "Zero-shot generalization", "Fall recovery"]
license = {text = "MIT"}
version = "0.1.0"
dynamic = [ "dependencies"]


[tool.setuptools]
py-modules = []
package-data = {"sample" = ["*.dat"]}

[tool.setuptools.dynamic]
dependencies = {file = ["tools/setup/requirements.txt"]}

#[tool.distutils.egg_info]
#egg_base = "/tmp"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = "cmake-build-debug|setup.py"

# Per-module options:
[[tool.mypy.overrides]]
module = ["unified_humanoid_get_up_env.*"]
disable_error_code = ["attr-defined", "import-not-found", "import-untyped", "var-annotated", "has-type"]
